# budgie-weather-applet

./: README.md  meson.build
data/: WeatherApplet.plugin  com.github.dirli.budgie-weather-applet.gschema.xml  meson.build  plugin.gresource.xml  settings.ui
po/: budgie-weather-applet.pot  ru.po
src/: Constants.vala  ILogindManager.vala  WeatherApplet.vala  WeatherInfo.vala  meson.build
src/Providers/: LibGWeather.vala  OWM.vala
src/Services/: Parser.vala  Utils.vala
src/Widgets/: AppletSettings.vala  Popover.vala
